infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saga-senai
  labels:
    app.kubernetes.io/name: saga-senai
